2-12-2024 all content updates, and portfolio page development v2

--- a/z_dev/public/index.html
+++ b/z_dev/public/index.html
@@ -196,7 +196,8 @@
                   <li class="mb-3"><i class="bi bi-chevron-right mb-1"></i> <strong>Birthday:</strong> <span>December
                       30, 1991</span></li>
                   <li class="mb-3"><i class="bi bi-chevron-right mb-1"></i> <strong>Website:</strong>
-                    <span>www.DaineDvorak.com</span></li>
+                    <span>www.DaineDvorak.com</span>
+                  </li>
                   <li class="mb-3"><i class="bi bi-chevron-right mb-1"></i> <strong>Phone:</strong> <span>+913 710
                       5841</span></li>
                   <li class="mb-3"><i class="bi bi-chevron-right mb-1"></i> <strong>City:</strong> <span>Shawnee, KS
@@ -210,7 +211,8 @@
                   <li class="mb-3"><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>(913)
                       710-5841)</span></li>
                   <li class="mb-3"><i class="bi bi-chevron-right mb-1"></i> <strong>Email:</strong>
-                    <span>dainedvorak@gmail.com</span></li>
+                    <span>dainedvorak@gmail.com</span>
+                  </li>
                   <li class="mb-3"><i class="bi bi-chevron-right mb-1"></i> <strong>Employment:</strong>
                     <button type="button" class="btn btn-primary position-relative">
                       Available For Work
@@ -1168,19 +1170,112 @@
                     <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
                       <div class="col-lg-4 col-md-6 portfolio-item filter-automation">
-                        <div class="portfolio-wrap">
-                          <img src="https://dainedvorak.com/portfolio/bookmarklet-serp-extractor/cover_url-extraction-bookmarklet-one-of-two.png" class="img-fluid" alt="URL SERP Extraction">
+                        <div class="portfolio-wrap" style="border-radius: 25px; border: 2px solid rgb(0, 0, 0);">
+                          <img
+                            src="https://dainedvorak.com/portfolio/bookmarklet-serp-extractor/cover_url-extraction-bookmarklet-one-of-two.png"
+                            class="img-fluid" alt="URL SERP Extraction">
                           <div class="portfolio-links">
-                            <a href="https://dainedvorak.com/portfolio/bookmarklet-serp-extractor/cover-link-bookmarklet-url-extractor-from-search-results-webpage-developed-by-daine-dvorak-v2.gif" data-gallery="portfolioGallery"
-                              class="portfolio-lightbox"
-                              title="This GIF shows the user experience when using this tool"><i
+                            <a href="https://dainedvorak.com/portfolio/bookmarklet-serp-extractor/cover-link-bookmarklet-url-extractor-from-search-results-webpage-developed-by-daine-dvorak-v2.gif"
+                              data-gallery="portfolioGallery" class="portfolio-lightbox"
+                              title="Bookmarklet URL SERP Extractor using bookmark automation custom made by Daine Dvorak"><i
                                 class="bx bx-plus"></i></a>
-                            <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                            <a href="https://dainedvorak.com/portfolio/bookmarklet-serp-extractor/index.html"
+                              title="More Details"><i class="bx bx-link"></i></a>
                           </div>
                         </div>
                       </div>
 
-                     
+
+                      <div class="col-lg-4 col-md-6 portfolio-item filter-automation filter-innovate filter-seo">
+                        <div class="portfolio-wrap shadow" style="border-radius: 25px; border: 2px solid rgb(0, 0, 0);">
+                          <img
+                            src="https://dainedvorak.com/portfolio/custom-chatgpt-model_schema-generator/cover_advanced-schema-generator-using-customgpt-by-daine-dvorak-v2.png"
+                            class="img-fluid border-radius-10" alt="">
+                          <div class="portfolio-links">
+                            <a href="https://dainedvorak.com/portfolio/custom-chatgpt-model_schema-generator/cover-2_custom-gpt-model-schema-wizard-by-daine-dvorak.gif"
+                              data-gallery="portfolioGallery" class="portfolio-lightbox border-radius-10"
+                              title="Automated Advanced Schema.org Markup Generator - Proprietary Tool"><i
+                                class="bx bx-plus"></i></a>
+                            <a href="https://dainedvorak.com/portfolio/custom-chatgpt-model_schema-generator/index.html"
+                              title="More Details"><i class="bx bx-link"></i></a>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="col-lg-4 col-md-6 portfolio-item filter-dev">
+                        <div class="portfolio-wrap shadow "
+                          style="border-radius: 25px; border: 2px solid rgb(0, 0, 0);">
+                          <img src="https://dainedvorak.com/portfolio/coding/images/coding-excellence.png"
+                            class="img-fluid"
+                            alt="Promotional graphic for Daine Dvorak, a skilled coding solutions developer, highlighting key skills in learning, innovation, and automation.">
+                          <div class="portfolio-links">
+                            <a href="https://dainedvorak.com/portfolio/coding/images/coding-excellence---cover-2.png"
+                              data-gallery="portfolioGallery" class="portfolio-lightbox"
+                              title=" Revolutionizing SEO Workflow with Key Skills in Learning, Innovation, and Automation">
+                              <i class="bx bx-plus"></i>
+                            </a>
+                            <a href="https://dainedvorak.com/portfolio/coding/index.html" title="More Details">
+                              <i class="bx bx-link"></i></a>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="col-lg-4 col-md-6 portfolio-item filter-dev">
+                        <div class="portfolio-wrap shadow" style="border-radius: 25px; border: 2px solid rgb(0, 0, 0);">
+                          <img
+                            src="https://dainedvorak.com/portfolio/seo-process-automation/google-app-scripts/gas---cover-image.png"
+                            class="img-fluid" alt="Promotional image for Daine Dvorak, highlighting expertise in
+                            Google App Scripts Development with key skills in JavaScript and automation.">
+                          <div class="portfolio-links">
+                            <a href="https://dainedvorak.com/portfolio/seo-process-automation/google-app-scripts/gas---cover-image-2.png"
+                              data-gallery="portfolioGallery" class="portfolio-lightbox"
+                              title="Transforming Productivity with Cutting-Edge SEO Process Automation">
+                              <i class="bx bx-plus"></i>
+                            </a>
+                            <a href="https://dainedvorak.com/portfolio/seo-process-automation/index.html"
+                              title="More Details">
+                              <i class="bx bx-link"></i></a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-lg-4 col-md-6 portfolio-item filter-automation">
+                        <div class="portfolio-wrap  shadow "
+                          style="border-radius: 25px; border: 2px solid rgb(0, 0, 0);">
+                          <img
+                            src="https://dainedvorak.com/portfolio/seo-process-automation/process-automation---cover-1.png"
+                            class="img-fluid"
+                            alt="Graphic showcasing Daine Dvorak's SEO Process Automation with key skills in custom formulas, innovation, and algorithms.">
+                          <div class="portfolio-links">
+                            <a href="https://dainedvorak.com/portfolio/seo-process-automation/process-automation---cover-2.png"
+                              data-gallery="portfolioGallery" class="portfolio-lightbox"
+                              title="https://dainedvorak.com/portfolio/seo-process-automation/process-automation---cover-2.png_title">
+                              <i class="bx bx-plus"></i>
+                            </a>
+                            <a href="https://dainedvorak.com/portfolio/seo-process-automation/index.html"
+                              title="More Details">
+                              <i class="bx bx-link"></i></a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-lg-4 col-md-6 portfolio-item filter-leadership">
+                        <div class="portfolio-wrap shadow "
+                          style="border-radius: 25px; border: 2px solid rgb(0, 0, 0);">
+                          <img
+                            src="https://dainedvorak.com/portfolio/leadership-and-management/images/management---cover-2.png"
+                            class="img-fluid"
+                            alt="Daine Dvorak's digital marketing team in a collaborative meeting, emphasizing leadership and employee growth for SEO excellence.">
+                          <div class="portfolio-links">
+                            <a href="https://dainedvorak.com/portfolio/leadership-and-management/images/management---cover.png"
+                              data-gallery="portfolioGallery" class="portfolio-lightbox"
+                              title="Leading Digital Transformation: A Case Study on Driving SEO Success and Team Growth">
+                              <i class="bx bx-plus"></i>
+                            </a>
+                            <a href="https://dainedvorak.com/portfolio/leadership-and-management/index.html"
+                              title="More Details">
+                              <i class="bx bx-link"></i></a>
+                          </div>
+                        </div>
+                      </div>
 
                     </div>
 
@@ -1188,56 +1283,11 @@
                 </section>
                 <!-- End Portfolio Section -->
 
-                <!-- ======= Services Section ======= -->
-                <!--   <section id="services" class="services">
-      <div class="container">
 
-        <div class="section-title">
-          <h2>Services</h2>
-          <p>
-            Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.
-          </p>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-            <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon"><i class="bi bi-card-checklist"></i></div>
-            <h4 class="title"><a href="">Dolor Sitema</a></h4>
-            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon"><i class="bi bi-bar-chart"></i></div>
-            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon"><i class="bi bi-binoculars"></i></div>
-            <h4 class="title"><a href="">Magni Dolores</a></h4>
-            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon"><i class="bi bi-brightness-high"></i></div>
-            <h4 class="title"><a href="">Nemo Enim</a></h4>
-            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon"><i class="bi bi-calendar4-week"></i></div>
-            <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
-          </div>
-        </div>
-
-      </div>
-    </section> --><!-- End Services Section -->
 
                 <!-- ======= DONE 2/8/2024 | Testimonials Section ======= -->
                 <section id="testimonials" class="testimonials section-bg">
-                  <div class="container">
+                  <div class="container-fluid">
 
                     <div class="section-title">
                       <h2>Testimonials</h2>
@@ -1350,11 +1400,11 @@
                             </p>
                             <img
                               src="https://dainedvorak.com/z_dev/public/assets/img/testimonials/jesse-brown-_-linkedin-photo.png"
-                              class="testimonial-img" alt="">
+                              class="testimonial-img" alt="Image of Jesse Brown to showcase Daine Dvorak's testimonial.">
                             <h3>Jesse Brown</h3>
                             <h4>SEO Director</h4>
                             <a
-                              href="https://www.linkedin.com/in/daine-dvorak/details/recommendations/?detailScreenTabIndex=0#:~:text=expertise.%20%0A%0AAs%20a%20leader%2C%20Daine%20was%20a%20teacher%20to%20those-,throughout,-our%20organization.%20He%20freely%20shared%20his%20strategic%20ideas%20and%20insights">Source</a>
+                              href="https://www.linkedin.com/in/daine-dvorak/details/recommendations/">Source</a>
                           </div>
                         </div><!-- End testimonial item -->
 
@@ -1367,7 +1417,7 @@
 
                 <!-- ======= Contact Section ======= -->
                 <section id="contact" class="contact">
-                  <div class="container">
+                  <div class="container-fluid">
 
                     <div class="section-title">
                       <h2>Contact</h2>
@@ -1445,7 +1495,7 @@
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
-    <div class="container">
+    <div class="container-fluid">
       <div class="credits">
         Designed by Daine Dvorak
       </div>
